修复流程设计器样式

--- a/src/H.LowCode.WorkflowDesigner.WasmHost/App.razor
+++ b/src/H.LowCode.WorkflowDesigner.WasmHost/App.razor
@@ -13,8 +13,8 @@
 {
     private Assembly[] Assemblies = new Assembly[]
     {
-        typeof(H.LowCode.WorkflowDesigner.Shared.WorkflowDesignerLayout).Assembly
+        typeof(H.LowCode.WorkflowDesigner.Shared.MainLayout).Assembly
     };
 
-    private Type DefaultLayout = typeof(H.LowCode.WorkflowDesigner.Shared.WorkflowDesignerLayout);
+    private Type DefaultLayout = typeof(H.LowCode.WorkflowDesigner.Shared.MainLayout);
 }
