--- a/src/H.LowCode.WorkflowDesigner/Nodes/StartNode.razor
+++ b/src/H.LowCode.WorkflowDesigner/Nodes/StartNode.razor
@@ -1,4 +1,5 @@
-﻿<div class="node-wrap-box start-node ">
+﻿@*发起节点*@
+<div class="node-wrap-box start-node">
     <div>
         <div class="title" style="background: rgb(87, 106, 149);">
             <span class="iconfont" style="display: none;"></span>
