--- a/src/H.LowCode.WorkflowDesigner/Shared/MainLayout.razor
+++ b/src/H.LowCode.WorkflowDesigner/Shared/MainLayout.razor
@@ -23,7 +23,9 @@
 	</div>
 	<div class="fd-nav-content">
 		<section class="dingflow-design">
-			@Body
+			<div id="box-scale" class="box-scale" style="transform: scale(1); transform-origin: 50% 0px 0px;">
+				@Body
+			</div>
 		</section>
 	</div>
 </div>
