重命名项目

--- a/src/H.LowCode.Designer.Admin/Shared/DesignerAdminLayout.razor
+++ b/src/H.LowCode.Designer.Admin/Shared/DesignerAdminLayout.razor
@@ -28,15 +28,21 @@
         },
         new MenuDataItem
         {
-            Path = "/templatecenter",
-            Name = "模板中心",
-            Key = "templatecenter"
+            Path = "/new",
+            Name = "新建应用",
+            Key = "new"
         },
         new MenuDataItem
         {
             Path = "/myapps",
             Name = "我的应用",
             Key = "myapps"
+        },
+        new MenuDataItem
+        {
+            Path = "/appmarket",
+            Name = "应用市场",
+            Key = "appmarket"
         }
     };
 
