--- a/src/H.LowCode.WorkflowDesigner/Shared/MainLayout.razor
+++ b/src/H.LowCode.WorkflowDesigner/Shared/MainLayout.razor
@@ -23,6 +23,7 @@
 	</div>
 	<div class="fd-nav-content">
 		<section class="dingflow-design">
+			<div class="zoom"><div class="zoom-out"></div><span>100%</span><div class="zoom-in"></div></div>
 			<div id="box-scale" class="box-scale" style="transform: scale(1); transform-origin: 50% 0px 0px;">
 				@Body
 			</div>
