调整目录结构

--- a/src/H.LowCode.DesignerEngine/H.LowCode.Designer.Admin/Apps/AppIndex.razor
+++ b/src/H.LowCode.DesignerEngine/H.LowCode.Designer.Admin/Apps/AppIndex.razor
@@ -1,7 +1,7 @@
 ﻿@page "/myapp"
-@page "/myapp/{AppCode}"
+@page "/myapp/{AppId}"
 
-@layout MainLayout
+@layout MyAppLayout
 
 <h1>应用设计器</h1>
 
@@ -9,5 +9,5 @@ Welcome to your app designer.
 
 @code {
     [Parameter]
-    public string AppCode { get; set; }
+    public string AppId { get; set; }
 }
