--- a/src/H.LowCode.DesignerEngine/H.LowCode.Designer.Admin/Shared/AdminLayout.razor
+++ b/src/H.LowCode.DesignerEngine/H.LowCode.Designer.Admin/Shared/AdminLayout.razor
@@ -22,25 +22,25 @@
     {
         new MenuDataItem
         {
-            Path = "/",
+            Path = "/admin",
             Name = "首页",
             Key = "home"
         },
         new MenuDataItem
         {
-            Path = "/new",
+            Path = "/admin/create",
             Name = "新建应用",
             Key = "new"
         },
         new MenuDataItem
         {
-            Path = "/myapps",
+            Path = "/admin/myapps",
             Name = "我的应用",
             Key = "myapps"
         },
         new MenuDataItem
         {
-            Path = "/appmarket",
+            Path = "/admin/appmarket",
             Name = "应用市场",
             Key = "appmarket"
         }
