--- a/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/_Imports.razor
+++ b/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/_Imports.razor
@@ -10,3 +10,4 @@
 @using H.LowCode.DesignerEngine.DesignPanel
 @using H.LowCode.DesignerEngine.PropertyPanel
 @using H.LowCode.BlazorExtensions
+@using H.LowCode.DesignerEngine.Services
