--- a/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/Shared/DesignerLayout.razor
+++ b/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/Shared/DesignerLayout.razor
@@ -1,13 +1,23 @@
-﻿@inherits LayoutComponentBase
+﻿@using System.Text
+@inherits LayoutComponentBase
 @inject NavigationManager NavigationManager
+@inject HttpClient HttpClient
 
 <AntDesign.Layout Class="layout designpage">
-    <Header Style="background-color: white;">
-        <a href="/"> 《 返回 </a>
-        <Menu Theme="MenuTheme.Light" Mode="MenuMode.Horizontal" DefaultSelectedKeys=@(new[]{"2"})>
-            <MenuItem Key="1">PC</MenuItem>
-            <MenuItem Key="2">Mobile</MenuItem>
-        </Menu>
+    <Header Style="background-color: white; padding:0 20px;">
+        <div style="float:left;">
+            <a href="javascript:void(0)"> @("<") 返回 </a>
+        </div>
+        @*<div style="text-align:center;">
+            <Menu Theme="MenuTheme.Light" Mode="MenuMode.Horizontal" DefaultSelectedKeys=@(new[]{"2"})>
+                <MenuItem Key="1">PC</MenuItem>
+                <MenuItem Key="2">Mobile</MenuItem>
+            </Menu>
+        </div>*@
+        <div style="float:right;">
+            <Button>预览</Button>
+            <Button Type="primary" OnClick="() => SaveMetadata()">保存</Button>
+        </div>
     </Header>
     <Content Class="designpage">
         @Body
@@ -19,6 +29,13 @@
 
 @code
 {
+    public void SaveMetadata()
+    {
+        string jsonData = "";
+        var httpContent = new StringContent(jsonData, Encoding.UTF8, "application/json");
+        HttpClient.PostAsync("/Designer/SaveMetadata", httpContent);
+    }
+
     public LinkItem[] Links { get; set; } =
     {
         new LinkItem
