--- a/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/DesignPanel/DragItem.razor
+++ b/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/DesignPanel/DragItem.razor
@@ -1,5 +1,5 @@
 ﻿<div draggable="true" class="dragitem" @ondragstart="()=>OnDragStart(DragDropModel)" @onclick="()=>OnClick(DragDropModel)">
-    @DragDropModel.Title
+    @DragDropModel.ComponentJSchema.Title
 </div>
 
 @code
