--- a/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/DesignPanel/DropItem.razor
+++ b/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/DesignPanel/DropItem.razor
@@ -29,7 +29,7 @@
                 </div>
             </div>
         }
-        <div class="dropitem-title">@DragDropModel.Title ：</div>
+        <div class="dropitem-title">@DragDropModel.ComponentJSchema.Title ：</div>
         <div class="dropitem-div">@DragDropModel.DropRenderFragment</div>
     </div>
 </div>
