--- a/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/_Imports.razor
+++ b/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/_Imports.razor
@@ -5,9 +5,13 @@
 @using System.Net.Http
 @using AntDesign.ProLayout
 @using AntDesign
+@using System.Text
 @using System.Text.Json
 @using H.LowCode.DesignerEngine.ComponentPanel
 @using H.LowCode.DesignerEngine.DesignPanel
 @using H.LowCode.DesignerEngine.PropertyPanel
 @using H.LowCode.BlazorExtensions
 @using H.LowCode.DesignerEngine.Services
+@using H.LowCode.Metadata
+@using Newtonsoft.Json.Schema
+@using H.LowCode.JsonSchemaExtensions
