--- a/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/Pages/DesignPage.razor
+++ b/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/Pages/DesignPage.razor
@@ -1,24 +1,70 @@
 ﻿@page "/designer/{AppId}/{PageId}"
+@using System.Net.Http.Json
+@using System.Net
 
 @layout DesignerLayout
+@inject HttpClient HttpClient
 
 <AntDesign.Layout Class="designpage" Style="padding:5px 2px 10px; background-color: #f7f7f7;">
-    <Sider Style="flex: auto; max-width: max-content; min-width: 200px;" Theme="SiderTheme.Light">
-        <ComponentPanel></ComponentPanel>
-    </Sider>
-    <Content Class="designpage">
-        <DesignPanel></DesignPanel>
-    </Content>
-    <Sider Class="designpage" Style="flex: auto; max-width: max-content; min-width: 250px;" Theme="SiderTheme.Light">
-        <PropertyPanel></PropertyPanel>
-    </Sider>
+    <Header Style="background-color: white; padding:0 20px;">
+        <div style="float:left;">
+            <a href="javascript:void(0)"> @("<") 返回 </a>
+        </div>
+        @*<div style="text-align:center;">
+            <Menu Theme="MenuTheme.Light" Mode="MenuMode.Horizontal" DefaultSelectedKeys=@(new[]{"2"})>
+                <MenuItem Key="1">PC</MenuItem>
+                <MenuItem Key="2">Mobile</MenuItem>
+            </Menu>
+        </div>*@
+        <div style="float:right;">
+            <Button>预览</Button>
+            <Button Type="primary" OnClick="() => SaveMetadata()">保存</Button>
+        </div>
+    </Header>
+    <AntDesign.Layout>
+        <Sider Style="flex: auto; max-width: max-content; min-width: 200px;" Theme="SiderTheme.Light">
+            <ComponentPanel></ComponentPanel>
+        </Sider>
+        <Content Class="designpage">
+            <DesignPanel DropModels="@DropModels"></DesignPanel>
+        </Content>
+        <Sider Class="designpage" Style="flex: auto; max-width: max-content; min-width: 250px;" Theme="SiderTheme.Light">
+            <PropertyPanel></PropertyPanel>
+        </Sider>
+    </AntDesign.Layout>
 </AntDesign.Layout>
 
 @code
 {
     [Parameter]
     public string AppId { get; set; }
-    
+
     [Parameter]
     public string PageId { get; set; }
+
+    private List<DragDropModel> DropModels = new List<DragDropModel>();
+
+    public async void SaveMetadata()
+    {
+        JSchema rootJSchema = GetRootJsonSchema();
+        //string jsonData = rootJSchema.ToJson();
+        //var httpContent = new StringContent(jsonData);
+        var jsonContent = JsonContent.Create(rootJSchema);
+        var result = await HttpClient.PostAsync("api/Designer/SaveMetadata", jsonContent);
+        if (result.StatusCode == HttpStatusCode.OK)
+        {
+            var responseJson = await result.Content.ReadAsStringAsync();
+        }
+    }
+
+    private JSchema GetRootJsonSchema()
+    {
+        JSchema rootJSchema = new JSchema();
+        rootJSchema.Type = JSchemaType.Object;
+        foreach(var dropModel in DropModels)
+        {
+            rootJSchema.Properties[dropModel.Name] = dropModel.ComponentJSchema;
+        }
+        return rootJSchema;
+    }
 }
