--- a/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/PropertyPanel/ComponentProperty.razor
+++ b/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/PropertyPanel/ComponentProperty.razor
@@ -1,12 +1,12 @@
 ﻿@if (DragDropModel != null)
 {
     <div class="componentproperty-item">
-        <label>ID <span style="font-size:10px; color:gray;">(字段名称/英文)</span>：</label>
+        <label>Name <span style="font-size:10px; color:gray;">(字段名称/英文)</span>：</label>
         <Input TValue="string" @bind-Value="@DragDropModel.Name" />
     </div>
     <div class="componentproperty-item">
         <label>标题：</label>
-        <Input TValue="string" @bind-Value="@DragDropModel.Title" />
+        <Input TValue="string" @bind-Value="@DragDropModel.ComponentJSchema.Title" />
     </div>
     <div class="componentproperty-item">
         <label>默认值：</label>
