--- a/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/_Imports.razor
+++ b/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/_Imports.razor
@@ -10,8 +10,8 @@
 @using H.LowCode.DesignerEngine.ComponentPanel
 @using H.LowCode.DesignerEngine.DesignPanel
 @using H.LowCode.DesignerEngine.PropertyPanel
-@using H.LowCode.BlazorExtensions
+@using H.LowCode.Blazor.Utility
 @using H.LowCode.DesignerEngine.Services
 @using H.LowCode.Metadata
 @using Newtonsoft.Json.Schema
-@using H.LowCode.JsonSchemaExtensions
+@using H
