--- a/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/ComponentPanel/ComponentPanel.razor
+++ b/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/ComponentPanel/ComponentPanel.razor
@@ -1,8 +1,8 @@
 ﻿<Tabs DefaultActiveKey="1" Class="designpage" Style="width:250px; padding:0px 8px;">
-    <TabPane Key="1" Tab="基础组件">
+    <TabPane Key="1" Tab="常用组件">
         <BasicComponent></BasicComponent>
     </TabPane>
-    <TabPane Key="2" Tab="高级组件">
+    <TabPane Key="2" Tab="自定义组件">
         <CustomComponent></CustomComponent>
     </TabPane>
 </Tabs>
