--- a/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/PropertyPanel/PropertyPanel.razor
+++ b/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/PropertyPanel/PropertyPanel.razor
@@ -2,7 +2,7 @@
     @if (ShowPropertyPanel)
     {
         <TabPane Key="1" Tab="组件属性">
-            <ComponentProperty Model="@DragDropModel.ComponentPropertyModel" DragDropModel="@DragDropModel"></ComponentProperty>
+            <ComponentProperty DragDropModel="@DragDropModel"></ComponentProperty>
         </TabPane>
     }
     <TabPane Key="2" Tab="页面属性">
