--- a/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/_Imports.razor
+++ b/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/_Imports.razor
@@ -14,4 +14,4 @@
 @using H.LowCode.DesignerEngine.Services
 @using H.LowCode.Metadata
 @using Newtonsoft.Json.Schema
-@using H
+@using H.LowCode.DesignerEngine.ComponentPropertyModels
